--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://digald.github.io/JoJos-React-Adventures/",
+  "homepage": "https://Digald.github.io/JoJos-React-Adventures/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
